--- a/CrmUpSchool.BusinessLayer/CrmUpSchool.BusinessLayer.csproj
+++ b/CrmUpSchool.BusinessLayer/CrmUpSchool.BusinessLayer.csproj
@@ -15,6 +15,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,4 +31,7 @@
     <Folder Include="ValidationRules\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="FluentValidation.AspNetCore" />
+  </ItemGroup>
 </Project>
