--- a/CrmUpSchool.BusinessLayer/CrmUpSchool.BusinessLayer.csproj
+++ b/CrmUpSchool.BusinessLayer/CrmUpSchool.BusinessLayer.csproj
@@ -29,9 +29,15 @@
     <Folder Include="DIContainer\" />
     <Folder Include="Logging\" />
     <Folder Include="ValidationRules\" />
+    <Folder Include="ValidationRules\SupplierValidation\" />
+    <Folder Include="ValidationRules\AppUserValidation\" />
+    <Folder Include="ValidationRules\CustomerValidation\" />
   </ItemGroup>
 
   <ItemGroup>
     <None Remove="FluentValidation.AspNetCore" />
+    <None Remove="ValidationRules\SupplierValidation\" />
+    <None Remove="ValidationRules\AppUserValidation\" />
+    <None Remove="ValidationRules\CustomerValidation\" />
   </ItemGroup>
 </Project>
