--- a/CrmUpSchool.UILayer/CrmUpSchool.UILayer.csproj
+++ b/CrmUpSchool.UILayer/CrmUpSchool.UILayer.csproj
@@ -30,6 +30,9 @@
     <ProjectReference Include="..\CrmUpSchool.BusinessLayer\CrmUpSchool.BusinessLayer.csproj" />
     <ProjectReference Include="..\CrmUpSchool.DataAccessLayer\CrmUpSchool.DataAccessLayer.csproj" />
     <ProjectReference Include="..\CrmUpSchool.EntityLayer\CrmUpSchool.EntityLayer.csproj" />
+    <ProjectReference Include="..\CrmUpSchool.DTOLayer\CrmUpSchool.DTOLayer.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -76,6 +79,9 @@
     <None Remove="Areas\Admin\Views\" />
     <None Remove="Areas\Admin\Views\AdminCustomer\" />
     <None Remove="Areas\Admin\Views\Alert\" />
+    <None Remove="Mapping\" />
+    <None Remove="Mapping\AutoMappingProfile\" />
+    <None Remove="Areas\Admin\Views\Contact\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Category\" />
@@ -114,6 +120,9 @@
     <Folder Include="Areas\Admin\Views\" />
     <Folder Include="Areas\Admin\Views\AdminCustomer\" />
     <Folder Include="Areas\Admin\Views\Alert\" />
+    <Folder Include="Mapping\" />
+    <Folder Include="Mapping\AutoMappingProfile\" />
+    <Folder Include="Areas\Admin\Views\Contact\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\PdfReports\" />
